<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/btnL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/btnL1"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btnL2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/btnL2"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btnL3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/btnL3"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="70dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/btnR1" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@+id/btn1"
            android:text="@string/btnR2" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/btn2"
            android:layout_margin="4dp"
            android:text="@string/btnR3"
            />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn1"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:layout_toStartOf="@+id/btn2"
            android:text="@string/btnR4" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="195dp"
            android:background="@android:color/holo_purple">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:cropToPadding="true"
                android:paddingTop="0dp"
                android:paddingEnd="@dimen/cardview_compat_inset_shadow"
                android:paddingBottom="@dimen/cardview_compat_inset_shadow"
                android:scaleType="centerInside"
                android:src="@drawable/eva"
                tools:ignore="MissingConstraints" />


            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                tools:ignore="MissingConstraints">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvNama"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textSize="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nama"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textSize="20dp"/>

                </TableRow>


                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvNim"
                        android:textAllCaps="true"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:textSize="20dp"
                        android:text="@string/nim"
                        android:textStyle="bold" />
                </TableRow>



            </TableLayout>
        </FrameLayout>

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>




